# splitmesh

./: .gitignore  Cargo.toml  dist-workspace.toml  fmesh_814.h5  fmesh_824.h5  readme.md
src/: cli.rs  main.rs
