[package]
authors      = ["Tony <repositony@outlook.com>"]
description  = "Command line tool to split meshtal tallies into individual files"
edition      = "2021"
keywords     = ["mcnp", "mesh", "meshtal"]
license      = "GPL-3.0 license"
name         = "splitmesh"
readme       = "readme.md"
repository   = "https://github.com/repositony/splitmesh"
rust-version = "1.81"
version      = "1.1.1"

[dependencies]
anyhow    = "1.0.97"
clap      = { version = "4.5.23", features = ["derive", "wrap_help"] }
log       = "0.4.22"
nom       = "7.1.3"
stderrlog = "0.6.0"

[lints.rust]
unsafe_code = "forbid"

[[bin]]
doc  = false
name = "splitmesh"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto      = "thin"
